--- a/src/style.css
+++ b/src/style.css
@@ -88,7 +88,7 @@ h1 {
   max-width: 10rem;
   min-width: 10rem;
   height: 10rem;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
