Design improvements bugfix

--- a/src/style.css
+++ b/src/style.css
@@ -65,7 +65,7 @@ a:hover {
 }
 
 .field-card-bottom > button {  
-  background: #dcdcdc;
+  background: #e4e4e4;
   border: none;
   color: #313131;
   font-weight: bolder;
